# tpu_graphs

./: BUILD  CHANGELOG.md  README.md  WORKSPACE  __init__.py  combine_csvs.py  echo_download_commands.py  env.sh  layout_evaluate.py  layout_inference1.py  layout_preprocess.py  layout_train.py  layout_train1.py  pyproject.toml  start.sh  tiles_beam_experiments.py  tiles_evaluate.py  train_tiles.py
.github/workflows/: pytest_and_autopublish.yml
baselines/tiles/: BUILD  data.py  implicit.py  implicit_test.py  metrics.py  models.py  random_baseline.py  train.py  train_args.py  train_lib.py
process_data/tensorflow_ops/: BUILD  encode_hlo_config_data.cc  encode_hlo_config_data_test.py  encode_hlo_module_data.cc  encode_hlo_module_data_test.py  encode_hlo_tuning_data.cc  encode_hlo_tuning_data_test.py
process_data/tensorflow_ops/testdata/: op_tuning_data.pb
process_data/xla/: BUILD  featurizers.h  featurizers_test.cc  hlo_encoder.cc  hlo_encoder.h  hlo_encoder_test.cc  hlo_opcode.h  hlo_opcode_test.cc  tuning_data_iterator.cc  tuning_data_iterator.h  tuning_data_iterator_test.cc
proto/: BUILD  tuning.proto
tpu_graphs/: __init__.py  echo_download_commands.py
tpu_graphs/baselines/layout/: data.py  inference_lib 1 .py  inference_lib1.py  models.py  preprocess.py  train_args.py  train_lib.py  train_lib1.py
tpu_graphs/baselines/layout/eval_indices/: nlp_default.json  nlp_random.json  validation.py  xla_default.json  xla_random.json
tpu_graphs/baselines/tiles/: data.py  implicit.py  metrics.py  models.py  random_baseline.py  train_args.py  train_lib.py
tpu_graphs/evals/: README.md
tpu_graphs/process_data/tensorflow_ops/: BUILD.bazel  encode_hlo_config_data.cc  encode_hlo_module_data.cc  encode_hlo_tuning_data.cc
tpu_graphs/process_data/tensorflow_ops/testdata/: module_tuning_data_layout.pb
tpu_graphs/process_data/xla/: BUILD.bazel  data_main.cc  featurizers.h  graph_features.cc  hlo_encoder.cc  hlo_encoder.h  hlo_opcode.h  tuning_data_iterator.cc  tuning_data_iterator.h
tpu_graphs/proto/: BUILD.bazel  tuning.proto
